syntax = "proto3";
package renderAdmin;


message RestartRenderReq {
}
message RestartRenderRsp {
  int32 result_code = 1; //返回码
  string result_msg = 2; //返回信息
}

message FinishRestartRenderRsp {
}

message FinishRestartRenderReq {
  int32 result_code = 1; //返回码
  string result_msg = 2; //返回信息
}

service RenderService {
  rpc RestartRender(RestartRenderReq) returns (RestartRenderRsp) {}
  rpc FinishRestartRender(FinishRestartRenderReq) returns (FinishRestartRenderRsp) {}
}